# esc-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  vitest.config.ts
.changeset/: gold-lizards-agree.md  lemon-donkeys-return.md  sour-planes-explain.md  sweet-ghosts-switch.md  tricky-cars-build.md  two-peaches-appear.md
.github/workflows/: ci.yaml
npm/darwin-arm64/: CHANGELOG.md  README.md  package.json
npm/darwin-x64/: CHANGELOG.md  README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: CHANGELOG.md  README.md  package.json
npm/linux-arm64-musl/: CHANGELOG.md  README.md  package.json
npm/linux-x64-gnu/: CHANGELOG.md  README.md  package.json
npm/linux-x64-musl/: CHANGELOG.md  README.md  package.json
npm/win32-arm64-msvc/: CHANGELOG.md  package.json
npm/win32-x64-msvc/: CHANGELOG.md  README.md  package.json
scripts/: index.js  scripts.js  source-map.js
src/: esc.rs  lib.rs  main.rs  nullish_coalescing.rs  object_rest_spread.rs  optional_catch_binding.rs  optional_chaining.rs
tests/: esc.test.ts
tests/fixtures/ArrowFunctions/should/: 1.js  2.js  3.js
tests/fixtures/ClassProperties/: index.js
tests/fixtures/LogicalAssignmentOperators/: index.js
tests/fixtures/NullishCoalescing/: index.js
tests/fixtures/OptionalCatchBinding/: index.js
tests/fixtures/OptionalChaining/: index.js
tests/fixtures/PrivateMethods/: index.js
tests/fixtures/TemplateLiterals/: 2.js
(+37 files in other folders)
