[package]
name = "esc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either="1"
swc_core={ version = "0.88.3", features = ["ecma_quote", "ecma_plugin_transform", "ecma_transforms_compat", "ecma_preset_env"] }
swc_ecma_visit = "0.97.0"
swc_ecma_parser = "0.142.0"
swc_compiler_base = { version = "0.5.1" }
swc_error_reporters = { version = "0.17.12" }
preset_env_base="0.4.10"
swc_ecma_preset_env="0.205.1"
anyhow="1.0.79"